centered search bar consumer page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
 
     <div class="consumer-container">
       <div class="textbox">
-        <p>Recyclable...or not? <br>Find out if your item is recyclable or if it should go into general waste instead.</p>
+      <p style="margin-top: 25px; margin-bottom: 45px;">Recyclable...or not? <br>Find out if your item is recyclable or if it should go into general waste instead.</p>
       </div>
       <div class="consumerheading">
         <p class="m-0"> Let's sort it out!</p>
