fixed anchor on index page, added modal to show page positive

--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -28,13 +28,23 @@
   margin-bottom: 30px;
 }
 
+
 .product-name {
   margin-top: 20px;
+  margin-bottom: 25px;
+}
+
+.message-negative {
+  margin-top: 30px;
+}
+
+.message-positive {
+  margin-top: 30px;
 }
 
 .tip {
-  padding-top: 20px;
-  padding-bottom: 15px;
+  padding-top: 25px;
+  padding-bottom: 20px;
   border-top: 1px dotted lightgrey;
   margin-top: 40px;
 }
