--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
     </div>
   <div style="background-image: url(<%=  asset_path('homepage.png') %>); background-size: cover; background-position: center; height: 100vh; background-repeat: repeat" >
   <div style="background-color: #4bc999; height: 30px; width: 100%; margin-top: 70px"></div>
-    <div class="card-wrapper">
+    <div class="card-wrapper" id="card-wrapper">
        <h5> We found <%= @products.count %> products for you!</h5>
     <% if @products.any? %>
       <% @products.each do |product| %>
@@ -63,10 +63,19 @@
 <script>
   document.addEventListener('turbolinks:load', () => {
     if (localStorage['scroll']) {
-      window.scroll({ top: localStorage['scroll'] });
+      document.getElementById('card-wrapper').scroll({ top: localStorage['scroll'] });
     }
-    window.addEventListener('scroll', () => {
-      localStorage['scroll'] = window.scrollY;
+
+    document.getElementById('card-wrapper').addEventListener('scroll', () => {
+      localStorage['scroll'] =  document.getElementById('card-wrapper').scrollTop;
     })
+    // if (localStorage['scroll']) {
+    //   window.scroll({ top: localStorage['scroll'] });
+    //   console.log('HALLO', localStorage['scroll']);
+    // }
+    // window.addEventListener('scroll', () => {
+    //   localStorage['scroll'] = window.scrollY;
+    // })
   });
+
 </script>
