--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,34 +12,61 @@
   <div>
     <% if @product&.fully_recyclability.round == 100  && @product.photo.attached?%>
       <div class="recyclable-message">
-        <p style="font-size: 24px;">Great news!</p>
-          <div><%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %></div>
-          <h5 class="product-name"><%= @product.name %></h5>
-        <div style="font-size: 60px; color: green">
-          <i class="far fa-check-circle"></i> 
-        </div>
+      <h5 class="product-name"><%= @product.name %></h5>
+          <div class="product-image"><%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %></div>      
+        <div class="message-positive">
           <ul style="list-style-type: none; margin: 0px; padding: 0px">
-        <% @materials.each do |material|%>
-          <li>This item is made of: <%= material.name %></li>
+          <% @materials.each do |material|%>
+            <li>This item is made of: <%= material.name %></li>
           <%end%>
           </ul>
-        <p>The packaging is therefore fully recyclable and can go straight into your recycling bin.</p>
-        <div class="tip"><strong>TIP:</strong> Empty and rinse before recycling! Food and liquid can spoil whole loads of recycling which then end up in landfill or incinerated.
+          <p>It is fully recyclable and can go into your recycling bin.</p>
+          <div style="font-size: 55px; color: green">
+            <i class="far fa-check-circle"></i> 
+          </div>
+        </div>
+        <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Did you know?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <p> Food and liquid can spoil whole loads of recycling which then end up in landfill or incinerated.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+        <div class="tip"><strong>TIP:</strong> Empty and rinse before recycling!
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+          <i class="fas fa-info"></i>
+        </button>
         </div>
         <div class="zizi"><%= link_to "Search another item", root_path(current_user)%></div>
     <% elsif @product&.fully_recyclability.round == 0 %>
       <div class="recyclable-message">
-        <p style="font-size: 24px;">Not so great!</p>
-      <div><%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %></div>
       <h5 class="product-name"><%= @product.name %></h5>
-    <div style="font-size: 60px; color: red">
-      <i class="fas fa-exclamation-circle"></i></div>
+      <div><%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %></div>
+      <div class="message-negative">
       <ul style="list-style-type: none; margin: 0px; padding: 0px">
         <% @materials.each do |material|%>
           <li>This item is made of: <%= material.name %></li>
         <%end%>
       </ul>
-    <p>This type of material cannot be recycled! Make sure you put it into the general waste bin.</p>
+    <p>This type of material cannot be recycled yet! Make sure you put it into the general waste bin.</p>
+    </div>
+    <div style="font-size: 55px; color: red">
+      <i class="fas fa-exclamation-circle"></i></div>
     <div class="tip"><strong>TIP:</strong> Buy more sustainable products in the future!</div>
     <div class="zizi">
       <%= link_to "Search alternatives!", alternatives_product_path(@product) %>
