--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -74,3 +74,13 @@ box-shadow: 0 4px 6px 0 #666;
   overflow: scroll;
   height: 90vh;
 }
+
+.title-myproducts{
+  font-size: 40px;
+  padding-top: 35px;
+  font-family: Reem Kufi;
+}
+
+a{
+  color: black;
+}
