--- a/app/views/users/_consumer.html.erb
+++ b/app/views/users/_consumer.html.erb
@@ -1,4 +1,4 @@
-<div style="background-image: url(<%=  asset_path('homepage.png') %>); background-size: cover; background-position: center; height: 100vh; background-repeat: repeat" >
+<div style="background-image: height: 100vh;" >
 
 <div class="container-index">
   <%= render "shared/navbar"%>
