--- a/app/assets/stylesheets/pages/_producer_show.scss
+++ b/app/assets/stylesheets/pages/_producer_show.scss
@@ -1,11 +1,17 @@
 .dashboard-content {
-    margin-top: 100px;
+    margin-top: 15px;
+    overflow: scroll;
+    height: 75vh;
+}
+.user-show-container {
+  width: 100%;
 }
 
 .card-action-buttons {
     display: flex;
     justify-content: center;
     margin-top: 15px;
+    place-content: space-evenly;
 }
 
 .box-cards {
@@ -13,13 +19,16 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  margin: 10px auto;
+  margin: 32px auto;
   max-width: 800px;
   border-radius: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .text-cards {
   padding-top: 20px;
+  font-size: 19px;
 }
 
 .image-cards {
@@ -37,5 +46,6 @@
   border-radius: 20px;
   margin-left: 68px;
   margin-right: 68px;
-  margin-top: 20px;
+  // margin-top: 20px;
+  display: block;
 }
