--- a/app/views/users/_producer.html.erb
+++ b/app/views/users/_producer.html.erb
@@ -1,37 +1,40 @@
-<div class="container-index">
+
+<div class="container-index user-show-container">
+
    <%= render "shared/navbar_producer"%>
+  <div style="background-image: height: 92vh;" >
 
-<div class="dashboard-content">
-<p>My products</p>
-<% current_user.products.each do |product| %>
-  <div class="box-cards">
-    <div class="image-cards">
-      <% if product.photo.attached? %>
-        <%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %>
-      <% end %>
+  <div class="dashboard-content">
+  <p class="title-myproducts">My products</p>
+  <% current_user.products.each do |product| %>
+    <div class="box-cards">
+      <div class="image-cards">
+        <% if product.photo.attached? %>
+          <%= cl_image_tag product.photo.key, height: 100, width: 100, crop: :fill %>
+        <% end %>
+      </div>
+        <div style="flex:1"><div class="text-cards"><%= link_to product.name, product_path(product)%></div>
+        <div class="card-action-buttons">
+          <div><%= link_to "<i class='fas fa-trash'></i>".html_safe, product_path(product), method: :delete, data: { confirm: "Are you sure?" } %></div>|<div><%= link_to "<i class='fas fa-edit'></i>".html_safe, edit_product_path(product)%></div>
+        </div>
+        </div>
+        <% if product&.fully_recyclability.round == 100 %>
+        <div style="font-size: 30px; color: green; padding-top: 7px; padding-right: 7px;">
+          <i class="far fa-check-circle"></i> </div>
+        <% elsif product&.fully_recyclability.round == 0 %>
+         <div style="font-size: 30px; color: red; padding-top: 7px; padding-right: 7px;">
+          <i class="fas fa-exclamation-circle"></i></div>
+        <%else%>
+        <div style="font-size: 30px; color: orange; padding-top: 7px; padding-right: 7px;">
+          <i class="fas fa-exclamation-circle"></i></div>
+          <%end%>
     </div>
-      <div><div class="text-cards"><%= link_to product.name, product_path(product)%></div>
-      <div class="card-action-buttons">
-        <div><%= link_to "<i class='fas fa-trash'></i>".html_safe, product_path(product), method: :delete, data: { confirm: "Are you sure?" } %></div>|<div><%= link_to "<i class='fas fa-edit'></i>".html_safe, edit_product_path(product)%></div>
-      </div>
-      </div>
-      <% if product&.fully_recyclability.round == 100 %>
-      <div style="font-size: 30px; color: green; padding-top: 7px; padding-right: 7px;">
-        <i class="far fa-check-circle"></i> </div>
-      <% elsif product&.fully_recyclability.round == 0 %>
-       <div style="font-size: 30px; color: red; padding-top: 7px; padding-right: 7px;">
-        <i class="fas fa-exclamation-circle"></i></div>
-      <%else%>
-      <div style="font-size: 30px; color: orange; padding-top: 7px; padding-right: 7px;">
-        <i class="fas fa-exclamation-circle"></i></div>
-        <%end%>
+    <% end %>
   </div>
-  <% end %>
-</div>
 
 
-  <div><%= link_to "Add a new product", new_product_path, class:"add-product-button" %></div>
-</div>
+    <%= link_to "Add a new product", new_product_path, class:"add-product-button" %>
+  </div>
 </div>
 
 
