--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
 <div style="background-image: url(<%=  asset_path('homepage.png') %>); background-size: cover; background-position: center; height: 120vh" >
 <%
 =end%>
-
+<div class="consumer-page" style="background-image: url(<%=  asset_path('sign_in.jpg') %>); background-size: cover; background-position: center" >
 <div class="container-index">
 <%= render "shared/navbar"%>
 
@@ -16,7 +16,7 @@
           <div><%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %></div>
           <h5 class="product-name"><%= @product.name %></h5>
         <div style="font-size: 60px; color: green">
-          <i class="far fa-check-circle"></i> 
+          <i class="far fa-check-circle"></i>
         </div>
           <ul style="list-style-type: none; margin: 0px; padding: 0px">
         <% @materials.each do |material|%>
@@ -47,7 +47,7 @@
     <% else %>
         <% recyclable_materials = @materials.select {|material| material.recyclability}  %>
         <% not_recyclable_materials = @materials - recyclable_materials %>
-        
+
           <div class="recyclable-message">
             <p style="font-size: 18px;"><%= @product.name %></p>
             <div class="product-image"><%= cl_image_tag @product.photo.key, height: 150, width: 150, crop: :fill %></div>
