--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -8,7 +8,7 @@
 }
 
 .carousel-inner .recyclable-message-game {
-  background-color:gold;
+  // background-color:gold;
   height: 320px;
 }
 
@@ -25,7 +25,7 @@ color: #d65555;
 }
 
 .recyclable-message-game  {
-  border : 1px solid black;
+  // border : 1px solid black;
   border-radius: 30px;
 
 }
@@ -40,3 +40,18 @@ color: #d65555;
   color: #382626;
   font-size: initial;
 }
+
+#green-icon {
+  color:green;
+}
+
+
+#red-icon {
+  color:red;
+}
+
+
+#orange-icon {
+  color:orange;
+}
+
