--- a/app/views/products/game.html.erb
+++ b/app/views/products/game.html.erb
@@ -82,8 +82,37 @@
     </a>
 
     </div>
-
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+      INFO
+    </button>
   </div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p><span id="green-icon">GREEN</span> - It's totally recyclable</p>
+        <p><span id="red-icon">RED</span> - It cannot be recycled </p>
+        <p><span id="orange-icon">ORANGE</span> - Some if it's contents are recyclable</p>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 </div>
 
