--- a/app/views/products/game.html.erb
+++ b/app/views/products/game.html.erb
@@ -102,7 +102,7 @@
       <div class="modal-body">
         <p><span id="green-icon">GREEN</span> - It's totally recyclable</p>
         <p><span id="red-icon">RED</span> - It cannot be recycled </p>
-        <p><span id="orange-icon">ORANGE</span> - Some if it's contents are recyclable</p>
+        <p><span id="orange-icon">ORANGE</span> - Some if its' contents are recyclable</p>
 
       </div>
       <div class="modal-footer">
