changed text on show page to bold and made heading consistent

--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -32,14 +32,17 @@
 .product-name {
   margin-top: 20px;
   margin-bottom: 25px;
+  padding: 0 10px;
 }
 
 .message-negative {
   margin-top: 30px;
+  font-weight: 600;
 }
 
 .message-positive {
   margin-top: 30px;
+  font-weight: 600;
 }
 
 .tip {
