styled the info button on 50/50 page

--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -35,6 +35,14 @@
   padding: 0 10px;
 }
 
+#info-button {
+  color: black;
+  background-color: lightgrey;
+  border: none;
+  box-shadow: 0 2px 4px 0 #666;
+  margin-left: 10px;
+}
+
 .message-negative {
   margin-top: 30px;
   font-weight: 600;
