--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="tip"><strong>TIP:</strong> Empty and rinse before recycling!
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        <button type="button" class="btn btn-primary" id="info-button" data-toggle="modal" data-target="#exampleModal">
           <i class="fas fa-info"></i>
         </button>
         </div>
