--- a/app/assets/stylesheets/pages/_show-page.scss
+++ b/app/assets/stylesheets/pages/_show-page.scss
@@ -43,6 +43,11 @@
   margin-left: 10px;
 }
 
+#modal-close {
+  background-color:#1EDD88;
+  border:none;
+}
+
 .message-negative {
   margin-top: 30px;
   font-weight: 600;
