--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,7 +33,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Did you know?</h5>
+                <h5 class="modal-title" id="exampleModalLabel" style="font-weight: 600;">Did you know?</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -42,7 +42,7 @@
               <p> Food and liquid can spoil whole loads of recycling which then end up in landfill or incinerated.</p>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" id="modal-close" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
