game completely fixed

--- a/app/views/products/game.html.erb
+++ b/app/views/products/game.html.erb
@@ -39,7 +39,7 @@
 
               </div>
             <% end %>
-            <div style="font-size: 45px; color: red" class="red-answer" id="red-answer<%= index %>">
+            <div style="font-size: 45px; color: red" class="red-answer" id="red-answer<%= index %>" data-recyclability="<%= product.fully_recyclability %>">
               <i class="fas fa-exclamation-circle"></i>
             </div>
             <div style="font-size: 45px; color: orange" class="orange-answer" data-recyclability="<%= product.fully_recyclability %>" >
