fixed stars focus to not show blue

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,7 +39,7 @@
                 </button>
               </div>
               <div class="modal-body">
-              <p> Food and liquid can spoil whole loads of recycling which then end up in landfill or incinerated.</p>
+              <p style="font-size: 18px"> Food and liquid can spoil whole loads of recycling which then end up in landfill or incinerated.</p>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" id="modal-close" data-dismiss="modal">Close</button>
